# kavuru-convexia

./: .gitignore  LICENSE  METHODOLOGY.md  Makefile  README.md  config.py  playground_protocol.md  pyproject.toml
.github/workflows/: ci.yml
docs/sample_report/: reliability_report.json  reliability_report.md
src/kavuru_convexia/: __init__.py  assets.py  cli.py  config.py  evaluator.py  llm.py  logutil.py  notebook_builder.py  reporting.py
src/kavuru_convexia/audits/: __init__.py  _common.py  calibration.py  conflict.py  report_types.py  reproducibility.py  robustness.py  sensitivity.py  stats.py
src/kavuru_convexia/data/: __init__.py  historical_assets.json
tests/: _stubs.py  conftest.py  test_assets.py  test_calibration.py  test_cli.py  test_conflict.py  test_evaluator.py  test_reproducibility.py  test_robustness.py  test_sensitivity.py  test_stats.py
